<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pg.eti.bicyclonicle.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recording_library"
        android:name="pg.eti.bicyclonicle.ui.recordings_library.RecordingsLibraryFragment"
        android:label="@string/title_recordings_library"
        tools:layout="@layout/fragment_recordings" />

    <fragment
        android:id="@+id/navigation_recording_settings"
        android:name="pg.eti.bicyclonicle.ui.recording_settings.RecordingSettingsFragment"
        android:label="@string/title_recording_settings" />

    <fragment
        android:id="@+id/navigation_app_settings"
        android:name="pg.eti.bicyclonicle.ui.app_settings.AppSettingsFragment"
        android:label="@string/title_app_settings" />
</navigation>